# vereinsflieger-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: add-sale.rs  get-access-token.rs  list-articles.rs  list-users.rs  sign-in.rs
src/: article.rs  client.rs  error.rs  lib.rs  md5.rs  sale.rs  user.rs
src/utils/: serde.rs
