[package]
name = "vereinsflieger"
version = "0.3.0"
description = "A Vereinsflieger API client for Rust based on the `reqwest` crate"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Turbo87/vereinsflieger-rs"
exclude = ["docs/*", "examples/*", ".gitignore"]

[dependencies]
anyhow = "1.0.95"
html-escape = "0.2.13"
md-5 = "0.10.6"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
serde_path_to_error = "0.1.16"
serde_urlencoded = "0.7.1"

[dev-dependencies]
anyhow = "=1.0.95"
clap = { version = "=4.5.26", features = ["derive"] }
tokio = { version = "=1.43.0", features = ["full"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
